--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
+    <title>FizzBuzz</title>
 </head>
 
 <body>
-    <h1 class="text-center mt-5">Piccolo titolo :-)</h1>
+    <h1 class="text-center text-warning bg-dark">FizzBuzz</h1>
     <div class="row wrap p-5">
       
     </div>
