eliminato margine negativo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <h1 class="text-center text-warning bg-dark">FizzBuzz</h1>
-    <div class="row wrap p-5">
+    <div class="row wrap p-5" style="--bs-gutter-x: -1.5rem;">
       
     </div>
     <script src="js/script.js"></script>
